...
    <string name="name_mission_text">Mission name</string>
    <string name="save_mission_text">Continue</string>
    <string name="mission_saved">Mission saved</string>
    <string name="error_mission_saved">Error while saving mission</string>
    <string name="private_repo">Private</string>
    <string name="warning_no_box_selected">"You haven't checked any of the options, if you continue your mission will not be saved for the next time"</string>
    <string name="continue_without_saving">Continue without saving</string>
    <string name="cancel">Cancel</string>


    <string name="share_repo">Share</string>

    <!-- Itinerary Create Activity -->
...
