...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_guideline">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/floatingActionButtonStyle"
            android:id="@+id/buttonToSaveOfflineMap"
            android:layout_gravity="bottom|end"
            android:layout_margin="30sp"
            android:contentDescription="@string/content_descriptor_save_icon"
            android:onClick="showDialog"
            app:srcCompat="@android:drawable/ic_menu_save"
            />
...
